--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,3 +1,12 @@
+body{
+    font-family: HanSans;
+}
+ul{
+    list-style-type:None
+
+}
+/* MainPage */
+/* Header */
 .Main .Header{
     display: flex;
     flex-direction: row;
@@ -7,9 +16,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    width: 955px;
     border-bottom: 2px solid #B5B5B5;
-    width: 975px;
     padding: 10px;
+    margin-bottom: 10px
 }
 .Main .Header nav li{
     float: left;
@@ -29,4 +39,51 @@
 }
 .Main .Header nav .nav_logo{
     margin-left: 20px;
+}
+
+/* Footer */
+.Main .Footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.Main .Footer Footer{
+    border-top: 1px solid #B5B5B5;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 925px;
+    padding:25px;
+    padding-top:15px;
+}
+.Main .Footer p{
+    font-size: 15px;
+    font-weight:550;
+    margin: 0;
+}
+.Main .Footer li{
+    padding-bottom:10px;
+}
+.Main .Footer ul{
+    padding: 0;
+    font-size: 13px;
+    color:#9E9E9E;
+}
+.Main .Footer Footer .left_wrapper .ul_wrapper{
+    display: flex;
+    flex-direction: row;
+}
+.Main .Footer Footer .left_wrapper li{
+    padding-left: 5px;
+    padding-right: 20px;
+
+}
+.Main .Footer Footer .right_wrapper{
+    display: flex;
+    flex-direction: row;
+    padding-right: 15px;
+}
+.Main .Footer Footer .right_wrapper div{
+    padding-right: 55px;
+    padding-top: 10px;
 }
